--- a/index.html
+++ b/index.html
@@ -47,42 +47,42 @@
             <section class="productos">
                 <!-- Producto ejemplo -->
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
                 <div class="producto">
-                    <img src="assets/img/auto1.jpg"City Car">
+                    <img src="assets/img/auto1.jpg" alt="City Car">
                     <h3>Model: City Car</h3>
                     <button>Ver más</button>
                 </div>
